# iranvpn

./: Cargo.toml  README.md  changelog.md  prd.json  prd.md
.github/workflows/: build.yml
android/: README.md  build.gradle.kts  gradlew  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/gradle/wrapper/: gradle-wrapper.properties
core/: Cargo.toml
core/src/: config.rs  doh.rs  fallback.rs  fetch.rs  jni_bridge.rs  lib.rs  path.rs  protocol_registry.rs
dist-config/: README.md  publish.sh  server-list.json.example
docs/: gofundme-campaign-draft.md  legal-disclaimer.md  protocol-integration.md
ios/: CLAUDE.md  README.md
ios/App/: ContentView.swift
ios/Config/: IranVPN.entitlements  Shared.xcconfig  Tests.xcconfig
ios/IranVPN/: IranVPN.xctestplan  IranVPNApp.swift
ios/IranVPN.xcodeproj/: project.pbxproj
ios/IranVPN.xcodeproj/xcshareddata/xcschemes/: IranVPN.xcscheme
ios/IranVPN.xcworkspace/: contents.xcworkspacedata
ios/IranVPNPackage/: Package.swift
ios/IranVPNPackage/Sources/IranVPNFeature/: ContentView.swift
ios/IranVPNTunnel/: PacketTunnelProvider.swift
ios/IranVPNUITests/: IranVPNUITests.swift
macos/: README.md
macos/Config/: Shared.xcconfig  Tests.xcconfig
macos/IranVPN/: IranVPN.xctestplan
macos/IranVPN.xcodeproj/: project.pbxproj
macos/IranVPN.xcodeproj/xcshareddata/xcschemes/: IranVPN.xcscheme
macos/IranVPNPackage/: Package.swift
macos/IranVPNUITests/: IranVPNUITests.swift
report-iran-vpn-2026/: 01-executive-summary.md  02-iran-filtering-system.md  03-vpn-circumvention-techniques.md  04-open-source-solutions.md  05-recommendations.md  06-references.md  07-complete-report-pros-cons-improvements.md  08-github-newest-vpn-tech-2026.md  README.md  changelog.md
scripts/: build-android-core.sh  build-core.sh  fetch-tun2socks-prebuilt.sh
station/: README.md
windows/: Cargo.toml  README.md
windows/src/: main.rs
(+24 files in other folders)
