[package]
name = "iran-vpn-core"
version = "0.1.0"
edition = "2021"
description = "Shared core for Iran circumvention VPN: fallback engine, config, DoH"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
jni = ["dep:jni"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2.5"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
jni = { version = "0.21", optional = true }

[target.'cfg(target_os = "android")'.dependencies]

[target.'cfg(not(target_os = "android"))'.dependencies]
# DoH / DNS (stub can use reqwest; full impl may use trust-dns or hickory)
# trust-dns-resolver = "0.24"

[dev-dependencies]
tokio-test = "0.4"
