[package]
name = "iran-vpn-windows"
version = "0.1.0"
edition = "2021"
description = "Iran VPN Windows client - Wintun + fallback engine"

[dependencies]
iran-vpn-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
eframe = { version = "0.28", default-features = false, features = ["default_fonts"] }

[target.'cfg(target_os = "windows")'.dependencies]
wintun = "0.3"
egui = "0.28"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
